grammar/src/versions/pg-schema/generated/PGSParser.ts
// Generated from src/versions/pg-schema/antlr/PGSParser.g4 by ANTLR 4.12.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from "@gql-grammar/antlr4";
import PGSParserListener from "./PGSParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class PGSParser extends Parser {
	public static readonly CREATE = 1;
	public static readonly NODE = 2;
	public static readonly EDGE = 3;
	public static readonly OPEN = 4;
	public static readonly OPTIONAL = 5;
	public static readonly TYPE = 6;
	public static readonly GRAPH = 7;
	public static readonly STRICT = 8;
	public static readonly LOOSE = 9;
	public static readonly ABSTRACT = 10;
	public static readonly IMPORTS = 11;
	public static readonly LPAREN = 12;
	public static readonly RPAREN = 13;
	public static readonly LBRACK = 14;
	public static readonly RBRACK = 15;
	public static readonly LBRACE = 16;
	public static readonly RBRACE = 17;
	public static readonly COMMA = 18;
	public static readonly COLON = 19;
	public static readonly SEMICOLON = 20;
	public static readonly DASH = 21;
	public static readonly ARROW = 22;
	public static readonly BAR = 23;
	public static readonly AMPERSAND = 24;
	public static readonly QUESTION = 25;
	public static readonly StringLiteral = 26;
	public static readonly Whitespace = 27;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_root = 0;
	public static readonly RULE_createType = 1;
	public static readonly RULE_createNodeType = 2;
	public static readonly RULE_createEdgeType = 3;
	public static readonly RULE_createGraphType = 4;
	public static readonly RULE_graphType = 5;
	public static readonly RULE_typeForm = 6;
	public static readonly RULE_graphTypeDefinition = 7;
	public static readonly RULE_elementTypes = 8;
	public static readonly RULE_elementType = 9;
	public static readonly RULE_nodeType = 10;
	public static readonly RULE_edgeType = 11;
	public static readonly RULE_middleType = 12;
	public static readonly RULE_endpointType = 13;
	public static readonly RULE_labelPropertySpec = 14;
	public static readonly RULE_labelSpec = 15;
	public static readonly RULE_propertySpec = 16;
	public static readonly RULE_properties = 17;
	public static readonly RULE_property = 18;
	public static readonly RULE_propertyType = 19;
	public static readonly RULE_key = 20;
	public static readonly RULE_labelName = 21;
	public static readonly RULE_typeName = 22;
	public static readonly literalNames: (string | null)[] = [ null, "'create'", 
                                                            "'node'", "'edge'", 
                                                            "'open'", "'optional'", 
                                                            "'type'", "'graph'", 
                                                            "'strict'", 
                                                            "'loose'", "'abstract'", 
                                                            "'imports'", 
                                                            "'('", "')'", 
                                                            "'['", "']'", 
                                                            "'{'", "'}'", 
                                                            "','", "':'", 
                                                            "';'", "'-'", 
                                                            "'>'", "'|'", 
                                                            "'&'", "'?'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "CREATE", 
                                                             "NODE", "EDGE", 
                                                             "OPEN", "OPTIONAL", 
                                                             "TYPE", "GRAPH", 
                                                             "STRICT", "LOOSE", 
                                                             "ABSTRACT", 
                                                             "IMPORTS", 
                                                             "LPAREN", "RPAREN", 
                                                             "LBRACK", "RBRACK", 
                                                             "LBRACE", "RBRACE", 
                                                             "COMMA", "COLON", 
                                                             "SEMICOLON", 
                                                             "DASH", "ARROW", 
                                                             "BAR", "AMPERSAND", 
                                                             "QUESTION", 
                                                             "StringLiteral", 
                                                             "Whitespace" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"root", "createType", "createNodeType", "createEdgeType", "createGraphType", 
		"graphType", "typeForm", "graphTypeDefinition", "elementTypes", "elementType", 
		"nodeType", "edgeType", "middleType", "endpointType", "labelPropertySpec", 
		"labelSpec", "propertySpec", "properties", "property", "propertyType", 
		"key", "labelName", "typeName",
	];
	public get grammarFileName(): string { return "PGSParser.g4"; }
	public get literalNames(): (string | null)[] { return PGSParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return PGSParser.symbolicNames; }
	public get ruleNames(): string[] { return PGSParser.ruleNames; }
	public get serializedATN(): number[] { return PGSParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, PGSParser._ATN, PGSParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public root(): RootContext {
		let localctx: RootContext = new RootContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, PGSParser.RULE_root);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 49;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===1) {
				{
				{
				this.state = 46;
				this.createType();
				}
				}
				this.state = 51;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 52;
			this.match(PGSParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public createType(): CreateTypeContext {
		let localctx: CreateTypeContext = new CreateTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, PGSParser.RULE_createType);
		try {
			this.state = 57;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 54;
				this.createNodeType();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 55;
				this.createEdgeType();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 56;
				this.createGraphType();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public createNodeType(): CreateNodeTypeContext {
		let localctx: CreateNodeTypeContext = new CreateNodeTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, PGSParser.RULE_createNodeType);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 59;
			this.match(PGSParser.CREATE);
			this.state = 60;
			this.match(PGSParser.NODE);
			this.state = 61;
			this.match(PGSParser.TYPE);
			this.state = 63;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===10) {
				{
				this.state = 62;
				this.match(PGSParser.ABSTRACT);
				}
			}

			this.state = 65;
			this.nodeType();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public createEdgeType(): CreateEdgeTypeContext {
		let localctx: CreateEdgeTypeContext = new CreateEdgeTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, PGSParser.RULE_createEdgeType);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 67;
			this.match(PGSParser.CREATE);
			this.state = 68;
			this.match(PGSParser.EDGE);
			this.state = 69;
			this.match(PGSParser.TYPE);
			this.state = 71;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===10) {
				{
				this.state = 70;
				this.match(PGSParser.ABSTRACT);
				}
			}

			this.state = 73;
			this.edgeType();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public createGraphType(): CreateGraphTypeContext {
		let localctx: CreateGraphTypeContext = new CreateGraphTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, PGSParser.RULE_createGraphType);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 75;
			this.match(PGSParser.CREATE);
			this.state = 76;
			this.match(PGSParser.GRAPH);
			this.state = 77;
			this.match(PGSParser.TYPE);
			this.state = 78;
			this.graphType();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public graphType(): GraphTypeContext {
		let localctx: GraphTypeContext = new GraphTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, PGSParser.RULE_graphType);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 80;
			this.typeName();
			this.state = 82;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8 || _la===9) {
				{
				this.state = 81;
				this.typeForm();
				}
			}

			this.state = 84;
			this.graphTypeDefinition();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typeForm(): TypeFormContext {
		let localctx: TypeFormContext = new TypeFormContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, PGSParser.RULE_typeForm);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 86;
			_la = this._input.LA(1);
			if(!(_la===8 || _la===9)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public graphTypeDefinition(): GraphTypeDefinitionContext {
		let localctx: GraphTypeDefinitionContext = new GraphTypeDefinitionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, PGSParser.RULE_graphTypeDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 90;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===11) {
				{
				this.state = 88;
				this.match(PGSParser.IMPORTS);
				this.state = 89;
				this.typeName();
				}
			}

			this.state = 92;
			this.match(PGSParser.LBRACE);
			this.state = 94;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===12 || _la===26) {
				{
				this.state = 93;
				this.elementTypes();
				}
			}

			this.state = 96;
			this.match(PGSParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public elementTypes(): ElementTypesContext {
		let localctx: ElementTypesContext = new ElementTypesContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, PGSParser.RULE_elementTypes);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 98;
			this.elementType();
			this.state = 103;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===18) {
				{
				{
				this.state = 99;
				this.match(PGSParser.COMMA);
				this.state = 100;
				this.elementType();
				}
				}
				this.state = 105;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public elementType(): ElementTypeContext {
		let localctx: ElementTypeContext = new ElementTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, PGSParser.RULE_elementType);
		try {
			this.state = 109;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 106;
				this.typeName();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 107;
				this.nodeType();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 108;
				this.edgeType();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public nodeType(): NodeTypeContext {
		let localctx: NodeTypeContext = new NodeTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, PGSParser.RULE_nodeType);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 111;
			this.match(PGSParser.LPAREN);
			this.state = 112;
			this.typeName();
			this.state = 113;
			this.labelPropertySpec();
			this.state = 114;
			this.match(PGSParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public edgeType(): EdgeTypeContext {
		let localctx: EdgeTypeContext = new EdgeTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, PGSParser.RULE_edgeType);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 116;
			this.endpointType();
			this.state = 117;
			this.match(PGSParser.DASH);
			this.state = 118;
			this.middleType();
			this.state = 119;
			this.match(PGSParser.DASH);
			this.state = 120;
			this.match(PGSParser.ARROW);
			this.state = 121;
			this.endpointType();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public middleType(): MiddleTypeContext {
		let localctx: MiddleTypeContext = new MiddleTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, PGSParser.RULE_middleType);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 123;
			this.match(PGSParser.LBRACK);
			this.state = 124;
			this.typeName();
			this.state = 125;
			this.labelPropertySpec();
			this.state = 126;
			this.match(PGSParser.RBRACK);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public endpointType(): EndpointTypeContext {
		let localctx: EndpointTypeContext = new EndpointTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, PGSParser.RULE_endpointType);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 128;
			this.match(PGSParser.LPAREN);
			this.state = 129;
			this.labelPropertySpec();
			this.state = 130;
			this.match(PGSParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public labelPropertySpec(): LabelPropertySpecContext {
		let localctx: LabelPropertySpecContext = new LabelPropertySpecContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, PGSParser.RULE_labelPropertySpec);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 134;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===19) {
				{
				this.state = 132;
				this.match(PGSParser.COLON);
				this.state = 133;
				this.labelSpec(0);
				}
			}

			this.state = 137;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===4) {
				{
				this.state = 136;
				this.match(PGSParser.OPEN);
				}
			}

			this.state = 140;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===16) {
				{
				this.state = 139;
				this.propertySpec();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public labelSpec(): LabelSpecContext;
	public labelSpec(_p: number): LabelSpecContext;
	// @RuleVersion(0)
	public labelSpec(_p?: number): LabelSpecContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: LabelSpecContext = new LabelSpecContext(this, this._ctx, _parentState);
		let _prevctx: LabelSpecContext = localctx;
		let _startState: number = 30;
		this.enterRecursionRule(localctx, 30, PGSParser.RULE_labelSpec, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 153;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				{
				this.state = 143;
				this.match(PGSParser.LPAREN);
				this.state = 144;
				this.labelSpec(0);
				this.state = 145;
				this.match(PGSParser.RPAREN);
				}
				break;
			case 2:
				{
				this.state = 147;
				this.match(PGSParser.LBRACK);
				this.state = 148;
				this.labelSpec(0);
				this.state = 149;
				this.match(PGSParser.RBRACK);
				}
				break;
			case 3:
				{
				this.state = 151;
				this.labelName();
				}
				break;
			case 4:
				{
				this.state = 152;
				this.typeName();
				}
				break;
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 165;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 163;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
					case 1:
						{
						localctx = new LabelSpecContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, PGSParser.RULE_labelSpec);
						this.state = 155;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 156;
						this.match(PGSParser.BAR);
						this.state = 157;
						this.labelSpec(6);
						}
						break;
					case 2:
						{
						localctx = new LabelSpecContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, PGSParser.RULE_labelSpec);
						this.state = 158;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 159;
						this.match(PGSParser.AMPERSAND);
						this.state = 160;
						this.labelSpec(5);
						}
						break;
					case 3:
						{
						localctx = new LabelSpecContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, PGSParser.RULE_labelSpec);
						this.state = 161;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 162;
						this.match(PGSParser.QUESTION);
						}
						break;
					}
					}
				}
				this.state = 167;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public propertySpec(): PropertySpecContext {
		let localctx: PropertySpecContext = new PropertySpecContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, PGSParser.RULE_propertySpec);
		let _la: number;
		try {
			this.state = 181;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 17, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 168;
				this.match(PGSParser.LBRACE);
				this.state = 169;
				this.properties();
				this.state = 172;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===18) {
					{
					this.state = 170;
					this.match(PGSParser.COMMA);
					this.state = 171;
					this.match(PGSParser.OPEN);
					}
				}

				this.state = 174;
				this.match(PGSParser.RBRACE);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 176;
				this.match(PGSParser.LBRACE);
				this.state = 178;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===4) {
					{
					this.state = 177;
					this.match(PGSParser.OPEN);
					}
				}

				this.state = 180;
				this.match(PGSParser.RBRACE);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public properties(): PropertiesContext {
		let localctx: PropertiesContext = new PropertiesContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, PGSParser.RULE_properties);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 183;
			this.property();
			this.state = 188;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 18, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 184;
					this.match(PGSParser.COMMA);
					this.state = 185;
					this.property();
					}
					}
				}
				this.state = 190;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 18, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public property(): PropertyContext {
		let localctx: PropertyContext = new PropertyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, PGSParser.RULE_property);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 192;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===5) {
				{
				this.state = 191;
				this.match(PGSParser.OPTIONAL);
				}
			}

			this.state = 194;
			this.key();
			this.state = 196;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===26) {
				{
				this.state = 195;
				this.propertyType();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public propertyType(): PropertyTypeContext {
		let localctx: PropertyTypeContext = new PropertyTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, PGSParser.RULE_propertyType);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 198;
			this.match(PGSParser.StringLiteral);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public key(): KeyContext {
		let localctx: KeyContext = new KeyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, PGSParser.RULE_key);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 200;
			this.match(PGSParser.StringLiteral);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public labelName(): LabelNameContext {
		let localctx: LabelNameContext = new LabelNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 42, PGSParser.RULE_labelName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 202;
			this.match(PGSParser.StringLiteral);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typeName(): TypeNameContext {
		let localctx: TypeNameContext = new TypeNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 44, PGSParser.RULE_typeName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 204;
			this.match(PGSParser.StringLiteral);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public sempred(localctx: RuleContext, ruleIndex: number, predIndex: number): boolean {
		switch (ruleIndex) {
		case 15:
			return this.labelSpec_sempred(localctx as LabelSpecContext, predIndex);
		}
		return true;
	}
	private labelSpec_sempred(localctx: LabelSpecContext, predIndex: number): boolean {
		switch (predIndex) {
		case 0:
			return this.precpred(this._ctx, 5);
		case 1:
			return this.precpred(this._ctx, 4);
		case 2:
			return this.precpred(this._ctx, 3);
		}
		return true;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!PGSParser.__ATN) {
			PGSParser.__ATN = new ATNDeserializer().deserialize(PGSParser._serializedATN);
		}

		return PGSParser.__ATN;
	}


	static DecisionsToDFA = PGSParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class RootContext extends ParserRuleContext {
	constructor(parser?: PGSParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public EOF(): TerminalNode {
		return this.getToken(PGSParser.EOF, 0);
	}
	public createType_list(): CreateTypeContext[] {
		return this.getTypedRuleContexts(CreateTypeContext) as CreateTypeContext[];
	}
	public createType(i: number): CreateTypeContext {
		return this.getTypedRuleContext(CreateTypeContext, i) as CreateTypeContext;
	}
    public get ruleIndex(): number {
    	return PGSParser.RULE_root;
	}
	public enterRule(listener: PGSParserListener): void {
	    if(listener.enterRoot) {
	 		listener.enterRoot(this);
		}
	}
	public exitRule(listener: PGSParserListener): void {
	    if(listener.exitRoot) {
	 		listener.exitRoot(this);
		}
	}
}

